--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,93 @@
-/*# sourceMappingURL=styles.css.map */
+@import "https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap";
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  background: #111;
+}
+
+main {
+  position: relative;
+}
+main .header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 20px;
+}
+main .header .logo {
+  color: #fff;
+  font-size: 1.2em;
+  font-weight: 600;
+  text-decoration: none;
+}
+main .header .toggle img {
+  max-width: 40px;
+  cursor: pointer;
+}
+main .banner {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+main .banner::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 200px;
+  background: -moz-linear-gradient();
+  z-index: 100;
+  background: linear-gradient(to top, #111, transparent);
+}
+main .banner .content {
+  position: relative;
+  z-index: 1000;
+  max-width: 900px;
+  text-align: center;
+}
+main .banner .content h2 {
+  color: #fff;
+  font-size: 5em;
+}
+main .banner .content p {
+  color: #fff;
+  font-size: 1.2em;
+}
+main .banner .content .btn {
+  display: inline-block;
+  background: #fff;
+  color: #111;
+  padding: 10px 30px;
+  margin-top: 20px;
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: 1.2em;
+  font-weight: 500;
+  transition: all 0.3s ease;
+}
+main .banner .content .btn:hover {
+  transform: scale(0.98);
+}
+main .banner .fitBg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  opacity: 0.7;
+}/*# sourceMappingURL=styles.css.map */
