--- a/css/styles.scss
+++ b/css/styles.scss
@@ -64,29 +64,109 @@ main{
         color: #fff;
         font-size: 1.2em;
       }
-      .btn{
-        display: inline-block;
-        background: #fff;
-        color: #111;
-        padding: 10px 30px;
-        margin-top: 20px;
-        border-radius: 5px;
-        text-decoration: none;
-        font-size: 1.2em;
-        font-weight: 500;
-        transition: all 0.3s ease;
-        &:hover{
-          transform: scale(0.98);
-        }
-      }
     }
     .fitBg{
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
+      height: 100vh;
       object-fit: cover;
       opacity: 0.7;
     }
+  }
+  .about{
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .contentBx{
+      min-width: 50%;
+      width: 50%;
+      text-align: end;
+      padding-right: 40px;
+      .tittleText{
+        font-weight: 600;
+        color: #fff;
+        font-size: 2em;
+        margin-bottom: 10px;
+      }
+      .text{
+        color: #fff;
+        font-size: 1em;
+        line-height: 1.5em;
+      }
+    }
+    .imgBx{
+      position: relative;
+      min-width: 50%;
+      width: 50%;
+      min-height: 500px;
+      background: red;
+      img{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 10px;
+      }
+    }
+  }
+  .banner2{
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .fitBg{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      object-fit: cover;
+      opacity: 0.7;
+    }
+    &::before{
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 400px;
+      z-index: 1000;
+      background: linear-gradient(to top, #111, transparent);
+    }
+    &::after{
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 400px;
+      z-index: 1000;
+      background: linear-gradient(to bottom, #111, transparent);
+    }
+  }
+  
+}
+a.btn{
+  position: relative;
+  display: inline-block;
+  background: #fff;
+  color: #111;
+  padding: 10px 30px;
+  margin-top: 20px;
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: 1.2em;
+  font-weight: 500;
+  transition: all 0.5s ease;
+  &:hover{
+    transform: scale(0.98);
   }
 }
