--- a/css/styles.scss
+++ b/css/styles.scss
@@ -152,7 +152,46 @@ main{
       background: linear-gradient(to bottom, #111, transparent);
     }
   }
-  
+  .banner3{
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .fitBg{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      object-fit: cover;
+      opacity: 0.7;
+    }
+
+    &::before{
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 400px;
+      z-index: 1000;
+      background: linear-gradient(to top, #111, transparent);
+    }
+    &::after{
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 400px;
+      z-index: 1000;
+      background: linear-gradient(to bottom, #111, transparent);
+    }
+
+  }
+
 }
 a.btn{
   position: relative;
