feat: destination and footer section

--- a/css/styles.css
+++ b/css/styles.css
@@ -96,11 +96,6 @@ main .about .contentBx .tittleText {
   font-size: 2em;
   margin-bottom: 10px;
 }
-main .about .contentBx .text {
-  color: #fff;
-  font-size: 1em;
-  line-height: 1.5em;
-}
 main .about .imgBx {
   position: relative;
   min-width: 50%;
@@ -156,6 +151,62 @@ main .banner2::after {
   z-index: 1000;
   background: linear-gradient(to bottom, #111, transparent);
 }
+main .destination {
+  text-align: justify;
+  color: #fff;
+}
+main .destination .content {
+  text-align: center;
+}
+main .destination .destinationList {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 40px;
+}
+main .destination .destinationList:hover .box {
+  opacity: 0.2;
+}
+main .destination .destinationList .box {
+  position: relative;
+  min-width: 350px;
+  height: 450px;
+  background: red;
+  transition: 0.5s;
+  margin: 10px;
+  overflow: hidden;
+  border-radius: 10px;
+}
+main .destination .destinationList .box:hover {
+  opacity: 1;
+}
+main .destination .destinationList .box .imgBx {
+  position: relative;
+  width: 100%;
+  height: 400px;
+}
+main .destination .destinationList .box .content {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+main .destination .destinationList .box .content h3 {
+  position: absolute;
+  bottom: 0;
+  color: #fff;
+  font-weight: 500;
+  line-height: 1.2em;
+}
+main .destination .destinationList .box .content h3 span {
+  color: #fff;
+  font-size: 0.8em;
+  font-weight: 300;
+  opacity: 0.5;
+}
 main .banner3 {
   position: relative;
   width: 100%;
@@ -194,6 +245,34 @@ main .banner3::after {
   z-index: 1000;
   background: linear-gradient(to bottom, #111, transparent);
 }
+main footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+main footer .sci {
+  position: relative;
+  display: flex;
+}
+main footer .sci li {
+  list-style: none;
+}
+main footer .sci li a {
+  text-decoration: none;
+  margin: 0 20px;
+}
+main footer .sci li a img {
+  filter: invert(1);
+  max-width: 45px;
+}
+main footer .copyright {
+  margin-top: 20px;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 300;
+  color: #666;
+}
 
 a.btn {
   position: relative;
@@ -210,4 +289,10 @@ a.btn {
 }
 a.btn:hover {
   transform: scale(0.98);
+}
+
+.text {
+  color: #fff;
+  font-size: 1em;
+  line-height: 1.5em;
 }/*# sourceMappingURL=styles.css.map */
