--- a/css/styles.scss
+++ b/css/styles.scss
@@ -93,21 +93,6 @@ main{
         margin-bottom: 10px;
       }
     }
-    .imgBx{
-      position: relative;
-      min-width: 50%;
-      width: 50%;
-      min-height: 500px;
-      img{
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-radius: 10px;
-      }
-    }
   }
   .banner2{
     position: relative;
@@ -247,7 +232,6 @@ main{
 
   }
   footer{
-    // background: #ad1e1e;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -263,6 +247,10 @@ main{
           img{
             filter: invert(1);
             max-width: 45px;
+            &:hover{
+              transform: rotate(-0.03turn);
+              filter: drop-shadow(0 30px 20px rgb(141, 76, 133)) invert(75%);
+            }
           }
         }
       }
@@ -281,6 +269,9 @@ main{
       }
     }
   }
+}
+section{
+  padding: 10px;
 }
 a.btn{
   position: relative;
@@ -303,6 +294,23 @@ a.btn{
   font-size: 1em;
   line-height: 1.5em;
 }
+.imgBx{
+  position: relative;
+  min-width: 50%;
+  width: 50%;
+  min-height: 500px;
+  img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+  }
+}
+
+
 
 @media (max-width: 600px){
   section{
@@ -332,16 +340,46 @@ a.btn{
         min-width: 100%;
         width: 100%;
         padding-right: 0px;
+        top: 30px;
       }
     }
-  
-
-
-
-
-
-
-
-
+    footer{
+      // background: #ad1e1e;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      .sci{
+        position: relative;
+        display: flex;
+        li{
+          list-style: none;
+          a{
+            text-decoration: none;
+            margin: 0 15px;
+            img{
+              filter: invert(1);
+              max-width: 30px;
+              &:hover{
+                transform: rotate(0.05turn);
+              }
+            }
+          }
+        }
+      }
+      .copyright{
+        margin-top: 20px;
+        color: #fff;
+        font-size: 13px;
+        font-weight: 200;
+        color: #666;
+        text-align: center;
+        a{
+          color: #fff;
+          text-decoration: none;
+          font-weight: 500;
+        }
+      }
+    }
   }
 }
