--- a/css/styles.scss
+++ b/css/styles.scss
@@ -177,10 +177,18 @@ main{
           align-items: center;
           h3{
             position: absolute;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            background: rgba(40, 50, 45, 0.5);
+            backdrop-filter: blur(8px);
+            width: 100%;
+            height: 17%;
             bottom: 0;
             color: #fff;
             font-weight: 500;
-            line-height: 1.2em;
+            line-height: 1.5em;
             span{
               color : #fff;
               font-size: 0.8em;
